lib/rl_bindings.h

Wave *LoadWave_(char *a);
Wave *LoadWaveFromMemory_(char *a, unsigned char *b, int c);
Sound *LoadSound_(char *a);
Sound *LoadSoundFromWave_(Wave *a);
void UpdateSound_(Sound *a, const void *b, int c);
bool IsWaveReady_(Wave *a);
void UnloadWave_(Wave *a);
bool IsSoundReady_(Sound *a);
void UnloadSound_(Sound *a);
int ExportWave_(Wave *a, char *b);
int ExportWaveAsCode_(Wave *a, char *b);
void PlaySound_(Sound *a);
void StopSound_(Sound *a);
void PauseSound_(Sound *a);
void ResumeSound_(Sound *a);
void PlaySoundMulti_(Sound *a);
int IsSoundPlaying_(Sound *a);
void SetSoundVolume_(Sound *a, float b);
void SetSoundPitch_(Sound *a, float b);
void SetSoundPan_(Sound *a, float b);
Wave *WaveCopy_(Wave *a);
float *LoadWaveSamples_(Wave *a);
Music *LoadMusicStream_(char *a);
Music *LoadMusicStreamFromMemory_(char *a, unsigned char *b, int c);
bool IsMusicReady_(Music *a);
void UnloadMusicStream_(Music *a);
void PlayMusicStream_(Music *a);
int IsMusicStreamPlaying_(Music *a);
void UpdateMusicStream_(Music *a);
void StopMusicStream_(Music *a);
void PauseMusicStream_(Music *a);
void ResumeMusicStream_(Music *a);
void SeekMusicStream_(Music *a, float b);
void SetMusicVolume_(Music *a, float b);
void SetMusicPitch_(Music *a, float b);
void SetMusicPan_(Music *a, float b);
float GetMusicTimeLength_(Music *a);
float GetMusicTimePlayed_(Music *a);
AudioStream *LoadAudioStream_(unsigned int a, unsigned int b, unsigned int c);
bool IsAudioStreamReady_(AudioStream *a);
void UnloadAudioStream_(AudioStream *a);
void UpdateAudioStream_(AudioStream *a, const void *b, int c);
int IsAudioStreamProcessed_(AudioStream *a);
void PlayAudioStream_(AudioStream *a);
void PauseAudioStream_(AudioStream *a);
void ResumeAudioStream_(AudioStream *a);
int IsAudioStreamPlaying_(AudioStream *a);
void StopAudioStream_(AudioStream *a);
void SetAudioStreamVolume_(AudioStream *a, float b);
void SetAudioStreamPitch_(AudioStream *a, float b);
void SetAudioStreamPan_(AudioStream *a, float b);
void SetAudioStreamCallback_(AudioStream *a, AudioCallback *b);
void AttachAudioStreamProcessor_(AudioStream *a, AudioCallback *b);
void DetachAudioStreamProcessor_(AudioStream *a, AudioCallback *b);
void AttachAudioMixedProcessor_(AudioCallback *a);
void DetachAudioMixedProcessor_(AudioCallback *a);